# intiface-desktop-egui

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  intiface-desktop-installer.iss
icons/: intiface-desktop-logo.psd
news/: intiface.news.md
src/: app.rs  lib.rs  main.rs
src/core/: file_storage.rs  intiface_configuration.rs  mod.rs  modal_manager.rs  process_manager.rs  process_messages.rs  simulated_device.rs  update_manager.rs  user_device_config_manager.rs  util.rs
src/panels/: about_panel.rs  device_settings_panel.rs  device_simulation_panel.rs  device_test_panel.rs  devices_panel.rs  first_use_panel.rs  mod.rs  news_panel.rs  server_status_panel.rs  settings_panel.rs
src/panels/easy_mark/: easy_mark_viewer.rs  mod.rs
src/panels/grid/: grid.rs  layout.rs  table.rs
src/panels/log/: archive.rs  layer.rs  mod.rs  panel.rs
