[package]
name = "intiface-desktop-egui"
version = "0.1.0"
authors = ["Kyle Machulis <kyle@nonpolynomial.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "intiface-desktop"
path = "src/main.rs"

[dependencies]
buttplug = { version = "5.1.5", default-features = false, features = ["client", "server", "tokio-runtime", "websockets"] }
# buttplug = { path = "../buttplug-rs/buttplug", default-features = false, features = ["client", "server", "tokio-runtime", "websockets"] }
bytes = "1.1.0"
chrono = "0.4.19"
dashmap = "5.0.0"
dirs = "4.0.0"
eframe = "0.15.0"
futures = "0.3.19"
getset = "0.1.2"
hashbrown = "0.11.2"
ico = "0.1.0"
indexmap = "1.7.0"
notify-rust = "4.5.5"
octocrab = "0.15.2"
once_cell = "1.9.0"
parking_lot = "0.11.2"
rand = "0.8.4"
reqwest = "0.11.8"
sentry = "0.23.0"
sentry-tracing = "0.23.0"
serde = { version = "1.0.132", features = ["derive"] }
serde_json = "1.0.73"
smartstring = "0.2.9"
thiserror = "1.0.30"
time = { version = "0.3.5", features = ["std", "formatting"] }
tokio = { version = "1.15.0", features = ["rt-multi-thread", "sync", "macros", "process", "fs", "net"] }
tokio-util = "0.6.9"
tracing = "0.1.29"
tracing-appender = "0.2.0"
tracing-futures = "0.2.5"
tracing-subscriber = { version = "0.3.4", features = ["env-filter"] }
zip = "0.5.13"

[build-dependencies]
vergen = "6.0.0"
anyhow = "1.0.52"

[features]
default = []
persistence = ["eframe/persistence"] # Enable if you want to persist app state on shutdown

[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 2 # fast and small wasm

[patch.crates-io]

# If you want to use the bleeding edge version of `egui`:
eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# eframe = { path = "../egui/eframe" }

sentry = { git = "https://github.com/getsentry/sentry-rust", branch = "master" }
sentry-tracing = { git = "https://github.com/getsentry/sentry-rust", branch = "master" }
